sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: '(' expected but identifier found.
  for i(<-1 to getNombreValeurs){
      ^AlgInsertionSort:10: error: illegal start of simple expression
} 
^